resize and align statboxes to fit values correctly.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,6 @@ box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
 
 .mainBody {
     background-image: url("../images/mordorlandscape.jpg");
-    /* background-image: url("../images/mordorportrait.jpg"); */
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -16,7 +15,6 @@ box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
 /* main sections */
 .upperSection {
     height: 40vh;
-    /* border: 3px dotted violet; */
 }
 .middleSection {
     height: 20vh;
@@ -41,10 +39,13 @@ box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
     max-height: 40%;
 }
 .selectBox {
+    display: flex;
     font-family: 'Poppins', sans-serif;
     font-size: 4vmin;
     font-weight: bold;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     height:20%;
     background-image:url(../images/silver.jpg);
     border-radius: 20px;
@@ -60,12 +61,18 @@ box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
     max-height: 95%;
     position:relative;
 }
+.fillerStatBox {
+    height: 10%;
+}
+
 .enemyStatIndicator {
     text-shadow:
         -1px -1px 0 #F8F8FF,  
         1px -1px 0 #F8F8FF,
         -1px 1px 0 #F8F8FF,
         1px 1px 0 #F8F8FF;
+    height:40%;
+    background-image: url('../images/wood.jpg');
     display: flex;
     font-family: 'Poppins', sans-serif;
     font-size: 3vmin;
@@ -73,11 +80,11 @@ box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
     align-items:center;
     justify-content:center;
     text-align: center;
+    padding: 0px;
     border: 1px solid black;
-    background-image: url('../images/wood.jpg')
 }
-/* css targeting middleSection*/
 
+/* css targeting middleSection*/
 .resetButton {
     background-image: url("../images/leaf.jpg");
     min-width: 20%;
@@ -100,11 +107,10 @@ box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
 }
 
 /* css targeting lowerSection*/
-
 .heroStatBox {
     height: 60%;
-    /* justify-content: stretch; */
 }
+
 .heroStatIndicator {
     text-shadow:
        -1px -1px 0 #F8F8FF,  
@@ -119,7 +125,8 @@ box-shadow: 5px 5px 5px 0px rgba(51,38,51,1);
     justify-content:center;
     text-align: center;
     border: 1px solid black;
-    background-image: url('../images/wood.jpg')
+    background-image: url('../images/wood.jpg');
+    height:40%;
 }
 
 .heroImageBox {
